# motorized-mounts

./: .gitignore  LICENSE  README.md
api/: Makefile  README.md  pyproject.toml
api/doc/: rpc.md  serial_socket.md  stepper_board.md
api/src/stepper_board/: __init__.py  rpc.py  serial_socket.py  stepper_board.py
characterization/: evaluation.py  results.ipynb
characterization/measurements/: cheap-direct_-2500_2500_10_5_0.1.csv  cheap-direct_-500_500_5_10_0.1.csv  cheap-geared_-1000_1000_10_10_0.1.csv  cheap-geared_-5000_5000_20_5_0.1.csv  newport-dc_-0.004_0.004_5e-05_10_0.1.csv  newport-dc_-0.02_0.02_0.0001_5_0.1.csv  newport-stepper_-0.004_0.004_5e-05_10_0.1.csv  newport-stepper_-0.02_0.02_0.0001_5_0.1.csv  pancake-direct_-200_200_1_5_0.1.csv  pancake-direct_-50_50_1_10_0.1.csv  pancake-geared_-100_100_1_10_0.1.csv  pancake-geared_-500_500_2_5_0.1.csv
electrical/adapter-board-controller/: adapter-board-controller.brd  adapter-board-controller.sch
electrical/adapter-board-stepper/: adapter-board-stepper.brd  adapter-board-stepper.sch
firmware/: Cargo.toml  README.md  make-image.sh
firmware/src/: exposed_functions.rs  main.rs  rpc.rs  serial.rs  stepper.rs  stepper_group.rs
images/plots/: evaluations.ipynb
mechanical/: README.md
mechanical/adapter-board/: adapter-board-mount.ipt  adapter-board-mount.stl
mechanical/cheap-direct/: fastener.ipt  fastener.stl  mount-plate.dxf  mount-plate.ipt  mount-plate.stl  screw-grip.ipt  shaft-grip.ipt  shaft-grip.stl
mechanical/cheap-geared/: cheap-geared.iam  mount-plate.dxf  mount-plate.ipt  mount-plate.stl  (+7 more)
(+32 files in other folders)
