[project]
authors = [{ name = "Lorenz Kies", email = "dev@lkies.net" }]
dependencies = ["pyserial>=3.5,<4"]
name = "stepper-board"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
stepper-board = { path = ".", editable = true }

[tool.pixi.feature.doc.dependencies]
pydoc-markdown = "*"

[tool.pixi.environments]
doc = ["doc"]


[tool.pixi.tasks]
